@@ -1237,6 +1237,7 @@ Péter Szabó
 Amir Szekely
 Arfrever Frehtes Taifersar Arahesis
 Hideaki Takahashi
+Indra Talip
 Neil Tallim
 Geoff Talvola
 Musashi Tamura
